--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/3DCarouselStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/3DCarouselStyle.axaml
@@ -5,30 +5,26 @@
     xmlns:layCv="clr-namespace:LayUI.Avalonia.Converters;assembly=LayUI.Avalonia">
     <Design.PreviewWith>
         <Border Padding="20">
-            <ScrollViewer Height="200">
-                <StackPanel>
-                    <lay:LayCarousel
-                        Width="500"
-                        Height="200"
-                        Margin="10"
-                        Type="Hover">
-                        <lay:LayCarouselItem Background="Red" Content="123123" />
-                        <lay:LayCarouselItem Background="Bisque" Content="adasdasd" />
-                    </lay:LayCarousel>
-                    <lay:LayCarousel
-                        Width="500"
-                        Height="200"
-                        Margin="10"
-                        IsAutoSwitch="True"
-                        Type="Hover">
-                        <lay:LayCarouselItem Content="123123" />
-                        <lay:LayCarouselItem Content="adasdasd" />
-                    </lay:LayCarousel>
-                </StackPanel>
-            </ScrollViewer>
+            <lay:Lay3DCarousel
+                Width="500"
+                Height="200"
+                Margin="10"
+                IsAutoSwitch="False"
+                Type="Hover">
+                <lay:Lay3DCarouselItem Background="Red" Content="1" />
+                <lay:Lay3DCarouselItem Background="AliceBlue" Content="2" />
+                <lay:Lay3DCarouselItem Background="AntiqueWhite" Content="3" />
+                <lay:Lay3DCarouselItem Background="Aqua" Content="4" />
+                <lay:Lay3DCarouselItem Background="Aquamarine" Content="5" />
+                <lay:Lay3DCarouselItem Background="Aqua" Content="6" />
+                <lay:Lay3DCarouselItem Background="Beige" Content="7" />
+                <lay:Lay3DCarouselItem Background="Bisque" Content="8" />
+                <lay:Lay3DCarouselItem Background="BlanchedAlmond" Content="9" />
+                <lay:Lay3DCarouselItem Background="Chartreuse" Content="10" />
+            </lay:Lay3DCarousel>
         </Border>
     </Design.PreviewWith>
-    <Style Selector="lay|LayCarousel">
+    <Style Selector="lay|Lay3DCarousel">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="CornerRadius" Value="{DynamicResource LayCornerRadiusSmall}" />
         <Setter Property="Template">
@@ -128,7 +124,7 @@
                                             <RadioButton
                                                 HorizontalAlignment="Stretch"
                                                 VerticalAlignment="Stretch"
-                                                Command="{Binding RelativeSource={RelativeSource AncestorType=lay:LayCarousel}, Path=SelectedCommand}"
+                                                Command="{Binding RelativeSource={RelativeSource AncestorType=lay:Lay3DCarousel}, Path=SelectedCommand}"
                                                 CommandParameter="{Binding Index}"
                                                 Cursor="Hand"
                                                 IsChecked="{Binding IsSelected, Mode=TwoWay}">
@@ -164,7 +160,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style Selector="lay|LayCarousel/template/Button#PART_Previous">
+    <Style Selector="lay|Lay3DCarousel/template/Button#PART_Previous">
         <Setter Property="Transitions">
             <Setter.Value>
                 <Transitions>
@@ -182,7 +178,7 @@
         <Setter Property="IsHitTestVisible" Value="false" />
         <Setter Property="Opacity" Value="0" />
     </Style>
-    <Style Selector="lay|LayCarousel/template/Button#PART_Next">
+    <Style Selector="lay|Lay3DCarousel/template/Button#PART_Next">
         <Setter Property="Transitions">
             <Setter.Value>
                 <Transitions>
@@ -200,7 +196,7 @@
         <Setter Property="IsHitTestVisible" Value="false" />
         <Setter Property="Opacity" Value="0" />
     </Style>
-    <Style Selector="lay|LayCarousel[Type=Always]/template/Button#PART_Previous">
+    <Style Selector="lay|Lay3DCarousel[Type=Always]/template/Button#PART_Previous">
         <Setter Property="Transitions">
             <Setter.Value>
                 <Transitions>
@@ -218,44 +214,44 @@
         <Setter Property="Opacity" Value="1" />
         <Setter Property="IsHitTestVisible" Value="true" />
     </Style>
-    <Style Selector="lay|LayCarousel[Type=Always]/template/Button#PART_Next">
+    <Style Selector="lay|Lay3DCarousel[Type=Always]/template/Button#PART_Next">
         <Setter Property="IsHitTestVisible" Value="true" />
         <Setter Property="Opacity" Value="1" />
     </Style>
-    <Style Selector="lay|LayCarousel[Type=None]/template/Button#PART_Previous">
+    <Style Selector="lay|Lay3DCarousel[Type=None]/template/Button#PART_Previous">
         <Setter Property="Opacity" Value="0" />
     </Style>
-    <Style Selector="lay|LayCarousel[Type=None]/template/Button#PART_Next">
+    <Style Selector="lay|Lay3DCarousel[Type=None]/template/Button#PART_Next">
         <Setter Property="Opacity" Value="0" />
     </Style>
-    <Style Selector="lay|LayCarousel[Type=Hover]/template/Button#PART_Previous">
+    <Style Selector="lay|Lay3DCarousel[Type=Hover]/template/Button#PART_Previous">
         <Setter Property="Opacity" Value="0" />
         <Setter Property="RenderTransform" Value="translateX(-10px)" />
     </Style>
-    <Style Selector="lay|LayCarousel[Type=Hover]:pointerover/template/Button#PART_Previous">
+    <Style Selector="lay|Lay3DCarousel[Type=Hover]:pointerover/template/Button#PART_Previous">
         <Setter Property="IsHitTestVisible" Value="true" />
         <Setter Property="RenderTransform" Value="translateX(0px)" />
         <Setter Property="Opacity" Value="1" />
     </Style>
-    <Style Selector="lay|LayCarousel[Type=Hover]/template/Button#PART_Next">
+    <Style Selector="lay|Lay3DCarousel[Type=Hover]/template/Button#PART_Next">
         <Setter Property="Opacity" Value="0" />
         <Setter Property="RenderTransform" Value="translateX(10px)" />
     </Style>
-    <Style Selector="lay|LayCarousel[Type=Hover]:pointerover/template/Button#PART_Next">
+    <Style Selector="lay|Lay3DCarousel[Type=Hover]:pointerover/template/Button#PART_Next">
         <Setter Property="IsHitTestVisible" Value="true" />
         <Setter Property="RenderTransform" Value="translateX(0px)" />
         <Setter Property="Opacity" Value="1" />
     </Style>
-    <Style Selector="lay|LayCarousel/template/Button#PART_Previous/template/ Border#PART_Border">
+    <Style Selector="lay|Lay3DCarousel/template/Button#PART_Previous/template/ Border#PART_Border">
         <Setter Property="Opacity" Value="0.2" />
     </Style>
-    <Style Selector="lay|LayCarousel/template/Button#PART_Next/template/ Border#PART_Border">
+    <Style Selector="lay|Lay3DCarousel/template/Button#PART_Next/template/ Border#PART_Border">
         <Setter Property="Opacity" Value="0.2" />
     </Style>
-    <Style Selector="lay|LayCarousel/template/Button#PART_Previous/template/ Border#PART_Border:pointerover">
+    <Style Selector="lay|Lay3DCarousel/template/Button#PART_Previous/template/ Border#PART_Border:pointerover">
         <Setter Property="Opacity" Value="0.5" />
     </Style>
-    <Style Selector="lay|LayCarousel/template/Button#PART_Next/template/ Border#PART_Border:pointerover">
+    <Style Selector="lay|Lay3DCarousel/template/Button#PART_Next/template/ Border#PART_Border:pointerover">
         <Setter Property="Opacity" Value="0.5" />
     </Style>
 </Styles>
