--- a/src/LayuiAvaloniaPack/Layui.Main/Views/CarouselPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/CarouselPage.axaml
@@ -6,7 +6,6 @@
     xmlns:lay="using:LayUI.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
-    d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
@@ -48,25 +47,23 @@
                     </DataTemplate>
                 </lay:LayCarousel.ItemTemplate>
             </lay:LayCarousel>
-            <lay:Lay3DCarousel
-                Height="400"
-                Margin="5"
-                IsAutoSwitch="True"
-                ItemsSource="{Binding Items}"
-                Type="Hover">
-                <lay:Lay3DCarousel.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Background="{DynamicResource Green}">
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                Foreground="White"
-                                Text="{Binding Title}" />
-                        </Grid>
-                    </DataTemplate>
-                </lay:Lay3DCarousel.ItemTemplate>
-            </lay:Lay3DCarousel>
 
+            <lay:Lay3DCarousel
+                Width="500"
+                Height="200"
+                Margin="10"
+                Type="Hover">
+                <lay:Lay3DCarouselItem Background="Red" Content="1" />
+                <lay:Lay3DCarouselItem Background="AliceBlue" Content="2" />
+                <lay:Lay3DCarouselItem Background="AntiqueWhite" Content="3" />
+                <lay:Lay3DCarouselItem Background="Aqua" Content="4" />
+                <lay:Lay3DCarouselItem Background="Aquamarine" Content="5" />
+                <lay:Lay3DCarouselItem Background="Aqua" Content="6" />
+                <lay:Lay3DCarouselItem Background="Beige" Content="7" />
+                <lay:Lay3DCarouselItem Background="Bisque" Content="8" />
+                <lay:Lay3DCarouselItem Background="BlanchedAlmond" Content="9" />
+                <lay:Lay3DCarouselItem Background="Chartreuse" Content="10" />
+            </lay:Lay3DCarousel>
         </StackPanel>
     </ScrollViewer>
 </UserControl>
