--- a/src/LayuiAvaloniaPack/Layui.Main/Views/CarouselPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/CarouselPage.axaml
@@ -11,11 +11,55 @@
     mc:Ignorable="d">
     <ScrollViewer HorizontalScrollBarVisibility="Disabled">
         <StackPanel>
+            <lay:Lay3DCarousel
+                Height="300"
+                IsAutoSwitch="True"
+                SwitchInterval="2"
+                Type="Hover">
+                <lay:Lay3DCarouselItem>
+                    <lay:LayImage Source="/Assets/avalonia-logo.ico" />
+                </lay:Lay3DCarouselItem>
+                <lay:Lay3DCarouselItem>
+                    <lay:LayImage Source="/Assets/avalonia-logo.ico" />
+                </lay:Lay3DCarouselItem>
+                <lay:Lay3DCarouselItem>
+                    <lay:LayImage Source="/Assets/avalonia-logo.ico" />
+                </lay:Lay3DCarouselItem>
+                <lay:Lay3DCarouselItem>
+                    <lay:LayImage Source="/Assets/avalonia-logo.ico" />
+                </lay:Lay3DCarouselItem>
+                <lay:Lay3DCarouselItem>
+                    <lay:LayImage Source="/Assets/avalonia-logo.ico" />
+                </lay:Lay3DCarouselItem>
+                <lay:Lay3DCarouselItem>
+                    <lay:LayImage Source="/Assets/avalonia-logo.ico" />
+                </lay:Lay3DCarouselItem>
+                <lay:Lay3DCarouselItem>
+                    <lay:LayImage Source="/Assets/avalonia-logo.ico" />
+                </lay:Lay3DCarouselItem>
+                <lay:Lay3DCarouselItem>
+                    <lay:LayImage Source="/Assets/avalonia-logo.ico" />
+                </lay:Lay3DCarouselItem>
+            </lay:Lay3DCarousel>
+            <lay:Lay3DCarousel
+                Height="300"
+                ItemsSource="{Binding Items}"
+                Type="Hover">
+                <lay:Lay3DCarousel.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <lay:LayImage Source="/Assets/avalonia-logo.ico" />
+                        </Grid>
+                    </DataTemplate>
+                </lay:Lay3DCarousel.ItemTemplate>
+            </lay:Lay3DCarousel>
             <lay:LayCarousel
                 Height="400"
                 Margin="5"
+                IsAutoSwitch="True"
                 ItemsSource="{Binding Items}"
                 SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"
+                SwitchInterval="2"
                 Type="Hover">
                 <lay:LayCarousel.ItemTemplate>
                     <DataTemplate>
@@ -48,22 +92,6 @@
                 </lay:LayCarousel.ItemTemplate>
             </lay:LayCarousel>
 
-            <lay:Lay3DCarousel
-                Width="500"
-                Height="200"
-                Margin="10"
-                Type="Hover">
-                <lay:Lay3DCarouselItem Background="Red" Content="1" />
-                <lay:Lay3DCarouselItem Background="AliceBlue" Content="2" />
-                <lay:Lay3DCarouselItem Background="AntiqueWhite" Content="3" />
-                <lay:Lay3DCarouselItem Background="Aqua" Content="4" />
-                <lay:Lay3DCarouselItem Background="Aquamarine" Content="5" />
-                <lay:Lay3DCarouselItem Background="Aqua" Content="6" />
-                <lay:Lay3DCarouselItem Background="Beige" Content="7" />
-                <lay:Lay3DCarouselItem Background="Bisque" Content="8" />
-                <lay:Lay3DCarouselItem Background="BlanchedAlmond" Content="9" />
-                <lay:Lay3DCarouselItem Background="Chartreuse" Content="10" />
-            </lay:Lay3DCarousel>
         </StackPanel>
     </ScrollViewer>
 </UserControl>
