--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/TextBoxStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/TextBoxStyle.axaml
@@ -14,7 +14,7 @@
         <Setter Property="MinHeight" Value="40" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="SelectionForegroundBrush" Value="White" />
-        <Setter Property="CornerRadius" Value="2" />
+        <Setter Property="CornerRadius" Value="{DynamicResource LayCornerRadiusSmall}" />
         <Setter Property="Padding" Value="5 2" />
         <Setter Property="BorderBrush" Value="{DynamicResource Gray}" />
         <Setter Property="SelectionBrush" Value="{DynamicResource Blue}" />
