--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CheckBoxStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CheckBoxStyle.axaml
@@ -21,7 +21,7 @@
                         Content="选中"
                         IsChecked="true"
                         Type="Primary" />
-                    <lay:LayCheckBox Content="未选中" />
+                    <lay:LayCheckBox Content="未选中" Type="Primary" />
                     <lay:LayCheckBox
                         Margin="5,0"
                         Content="禁用"
@@ -97,10 +97,10 @@
     </Style>
     <Style Selector="lay|LayCheckBox[Type=Default]:indeterminate /template/ Path#PART_Path">
         <Setter Property="Data" Value="M63.6 489.6h896.7v44.8H63.6z" />
-        <Setter Property="Height" Value="2" />
+        <Setter Property="Height" Value="1" />
     </Style>
     <Style Selector="lay|LayCheckBox[Type=Default]:disabled /template/ Border#PART_Border">
-        <Setter Property="BorderBrush" Value="{DynamicResource Gray}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource SilverGray}" />
         <Setter Property="Background" Value="{DynamicResource LighGray}" />
     </Style>
     <Style Selector="lay|LayCheckBox[Type=Default]:checked /template/ Path#PART_Path">
@@ -115,6 +115,7 @@
     <Style Selector="lay|LayCheckBox[Type=Primary]">
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="TextBlock.Foreground" Value="White" />
         <Setter Property="Padding" Value="5 0" />
         <Setter Property="CornerRadius" Value="2" />
         <Setter Property="BorderThickness" Value="1" />
@@ -123,17 +124,18 @@
                 <ControlTemplate>
                     <Grid Background="Transparent">
                         <Border
-                            Name="PART_Border"
+                            x:Name="PART_Border"
                             Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             CornerRadius="{TemplateBinding CornerRadius}">
                             <Grid Name="PART_Grid">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto" />
                                     <ColumnDefinition />
+                                    <ColumnDefinition Width="auto" />
                                 </Grid.ColumnDefinitions>
                                 <Border
+                                    Grid.Column="1"
                                     Width="{TemplateBinding Size}"
                                     Height="{TemplateBinding Size}"
                                     MinWidth="16"
@@ -141,13 +143,12 @@
                                     Background="White"
                                     CornerRadius="{TemplateBinding CornerRadius}">
                                     <Path
-                                        Name="PART_Path"
+                                        x:Name="PART_Icon"
                                         Margin="2,5"
                                         Stretch="Fill" />
                                 </Border>
                                 <ContentPresenter
-                                    Name="PART_ContentPresenter"
-                                    Grid.Column="1"
+                                    x:Name="PART_ContentPresenter"
                                     Padding="{TemplateBinding Padding}"
                                     HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                     VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
@@ -160,44 +161,45 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style Selector="lay|LayCheckBox[Type=Primary]:pointerover /template/ Path#PART_Path">
+    <Style Selector="lay|LayCheckBox[Type=Primary]:unchecked /template/ Border#PART_Border">
+        <Setter Property="BorderBrush" Value="{DynamicResource Gray}" />
+        <Setter Property="Background" Value="{DynamicResource Gray}" />
+    </Style>
+    <Style Selector="lay|LayCheckBox[Type=Primary]:unchecked:pointerover /template/ Path#PART_Icon">
         <Setter Property="Fill" Value="{DynamicResource Gray}" />
-        <Setter Property="Data" Value="M389.888 838.656a91.136 91.136 0 0 1-64.512-25.6L65.536 552.192a30.72 30.72 0 0 1 43.52-43.52L368.64 768a29.952 29.952 0 0 0 42.24 0l502.784-502.272a30.72 30.72 0 1 1 43.52 43.52L454.4 812.032a91.136 91.136 0 0 1-64.512 26.624z" />
     </Style>
-    <Style Selector="lay|LayCheckBox[Type=Primary]:not(:checked) /template/ Border#PART_Border">
-        <Setter Property="BorderBrush" Value="{DynamicResource Gray}" />
-        <Setter Property="Background" Value="{DynamicResource Gray}" />
-    </Style>
-    <Style Selector="lay|LayCheckBox[Type=Primary]:not(:checked) /template/ Border#PART_Border">
-        <Setter Property="BorderBrush" Value="{DynamicResource Gray}" />
-        <Setter Property="Background" Value="{DynamicResource Gray}" />
-    </Style>
-    <Style Selector="lay|LayCheckBox[Type=Primary]:checked /template/ Border#PART_Border">
-        <Setter Property="BorderBrush" Value="{DynamicResource CyanGreen}" />
-        <Setter Property="Background" Value="{DynamicResource CyanGreen}" />
-    </Style>
-    <Style Selector="lay|LayCheckBox[Type=Primary]:checked /template/ Path#PART_Path">
-        <Setter Property="Fill" Value="{DynamicResource CyanGreen}" />
+    <Style Selector="lay|LayCheckBox[Type=Primary]:unchecked /template/ Path#PART_Icon">
         <Setter Property="Data" Value="M389.888 838.656a91.136 91.136 0 0 1-64.512-25.6L65.536 552.192a30.72 30.72 0 0 1 43.52-43.52L368.64 768a29.952 29.952 0 0 0 42.24 0l502.784-502.272a30.72 30.72 0 1 1 43.52 43.52L454.4 812.032a91.136 91.136 0 0 1-64.512 26.624z" />
     </Style>
     <Style Selector="lay|LayCheckBox[Type=Primary]:checked /template/ ContentPresenter#PART_ContentPresenter">
         <Setter Property="TextBlock.Foreground" Value="White" />
     </Style>
-    <Style Selector="lay|LayCheckBox[Type=Primary]:indeterminate /template/ Path#PART_Path">
+    <Style Selector="lay|LayCheckBox[Type=Primary]:checked /template/ Border#PART_Border">
+        <Setter Property="BorderBrush" Value="{DynamicResource CyanGreen}" />
+        <Setter Property="Background" Value="{DynamicResource CyanGreen}" />
+    </Style>
+    <Style Selector="lay|LayCheckBox[Type=Primary]:checked /template/ Path#PART_Icon">
+        <Setter Property="Data" Value="M389.888 838.656a91.136 91.136 0 0 1-64.512-25.6L65.536 552.192a30.72 30.72 0 0 1 43.52-43.52L368.64 768a29.952 29.952 0 0 0 42.24 0l502.784-502.272a30.72 30.72 0 1 1 43.52 43.52L454.4 812.032a91.136 91.136 0 0 1-64.512 26.624z" />
+        <Setter Property="Fill" Value="{DynamicResource CyanGreen}" />
+    </Style>
+    <Style Selector="lay|LayCheckBox[Type=Primary]:indeterminate /template/ Border#PART_Border">
+        <Setter Property="BorderBrush" Value="{DynamicResource CyanGreen}" />
+        <Setter Property="Background" Value="{DynamicResource CyanGreen}" />
+    </Style>
+    <Style Selector="lay|LayCheckBox[Type=Primary]:indeterminate /template/ Path#PART_Icon">
         <Setter Property="Data" Value="M63.6 489.6h896.7v44.8H63.6z" />
-        <Setter Property="Height" Value="2" />
-        <Setter Property="Fill" Value="{DynamicResource Gray}" />
+        <Setter Property="Height" Value="1" />
+        <Setter Property="Fill" Value="{DynamicResource CyanGreen}" />
     </Style>
     <Style Selector="lay|LayCheckBox[Type=Primary]:disabled /template/ Border#PART_Border">
-        <Setter Property="BorderBrush" Value="{DynamicResource LighGray}" />
-        <Setter Property="Background" Value="{DynamicResource LighGray}" />
-    </Style>
-    <Style Selector="lay|LayCheckBox[Type=Primary]:disabled /template/ Border#PART_Border">
-        <Setter Property="BorderBrush" Value="{DynamicResource Gray}" />
-        <Setter Property="Background" Value="{DynamicResource LighGray}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource SilverGray}" />
+        <Setter Property="Background" Value="{DynamicResource SilverGray}" />
     </Style>
     <Style Selector="lay|LayCheckBox[Type=Primary]:disabled /template/ ContentPresenter#PART_ContentPresenter">
         <Setter Property="TextBlock.Foreground" Value="{DynamicResource Gray}" />
+    </Style>
+    <Style Selector="lay|LayCheckBox[Type=Primary]:disabled /template/ Path#PART_Icon">
+        <Setter Property="Fill" Value="Transparent" />
     </Style>
     <!--  原始效果，顺序不能颠倒 ent  -->
 </Styles>
